Fixed semitransparent overlay aligning with the wrong container.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -266,6 +266,8 @@ nav.primary a:hover {
 	#home .wrap {
 		padding: 0;
 		margin: 0;
+		height: 100%;
+		position: relative;
 	}
 
 	#home {
